# dbt-credit-risk

./: .gitignore  .sqlfluff  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  dbt_project.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: brief.md
docs/adr/: 0001-roll-rate-macro-api-and-contract.md  0002-vintage-curve-and-cpr-smm-macro-design.md  0003-documentation-and-input-contract-approach.md  0004-hub-publish-and-release-strategy.md
docs/macros/: cpr_smm.md  roll_rate_matrix.md  vintage_curve.md
integration_tests/: .user.yml  dbt_project.yml  profiles.yml
integration_tests/models/: _models.yml  cpr_smm_inactive_output.sql  cpr_smm_output.sql  roll_rate_output.sql  roll_rate_output_segmented.sql  vintage_curve_output.sql
integration_tests/seeds/: expected_cpr_smm.csv  expected_roll_rate_matrix.csv  expected_vintage_curve.csv  loan_performance.csv  loan_performance_cpr.csv  loan_performance_cpr_inactive.csv  loan_performance_segmented.csv  loan_performance_vintage.csv
integration_tests/tests/: assert_cpr_smm_annualization.sql  assert_cpr_smm_excludes_inactive_prepayment.sql  assert_cpr_smm_matches_expected.sql  assert_gap_exclusion.sql  assert_no_negative_self_transition.sql  assert_no_null_from_bucket.sql  assert_probabilities_sum_to_one.sql  assert_roll_rate_matches_expected.sql  (+2 more)
macros/: cpr_smm.sql  roll_rate_matrix.sql  schema.yml  vintage_curve.sql
standards/: dbt-standards.md
tests/: test_contract_violations.py  test_cpr_smm_integration.py  test_roll_rate_integration.py  test_vintage_curve_integration.py
(+7 files in other folders)
