[project]
name = "dbt-credit-risk"
version = "0.1.0"
description = "dbt package of credit-risk analytics macros: roll-rate matrices, vintage curves, CPR/SMM prepayment curves"
requires-python = ">=3.12,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
