[project]
name = "dbt-credit-risk"
version = "0.1.0"
description = "dbt package of credit-risk analytics macros: roll-rate matrices, vintage curves, CPR/SMM prepayment curves"
requires-python = ">=3.12,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "sqlfluff>=3.0",
    "pre-commit>=4.0",
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "RUF", "C4", "FURB", "RET", "TC", "FA"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
